--- a/styles/globalAnimationsClasses.scss
+++ b/styles/globalAnimationsClasses.scss
@@ -41,6 +41,17 @@
   }
 }
 
+@keyframes fadeOpacityToBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(16px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 @keyframes translateToRight {
   0% {
     transform: translateX(-16px);
