--- a/styles/globalFormClasses.scss
+++ b/styles/globalFormClasses.scss
@@ -28,6 +28,32 @@ button {
   font-family: Vazirmatn , serif;
 }
 
+.whiteBtn {
+  padding: 0.4rem 0.7rem;
+  border: 1px solid white;
+  background-color: rgba(255, 255, 255, 0.7);
+  color: black;
+  font-weight: 500;
+  font-size: 1.1rem;
+  border-radius: 0.2rem;
+  transition: all .4s;
+  span {
+    animation: fadeOpacityToLeft .4s;
+  }
+  .icon {
+    display: none;
+    animation: fadeOpacityToRight .4s;
+  }
+}
+
+.whiteBtn:hover {
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 1);
+  .icon {
+    display: block;
+  }
+}
+
 .orangeBtn {
   border: 1px solid orange;
   padding: .2rem .3rem;
