write articlesPage UI part-1

--- a/styles/globalColors.scss
+++ b/styles/globalColors.scss
@@ -18,3 +18,11 @@
 .white {
   color: white;
 }
+
+.backBlueBlack {
+  background-color: #3F3351 !important;
+}
+
+.redPeach {
+  color: #FF8B8B;
+}
