add register-login page & define some pages & change Navbar UI

--- a/styles/articlesPage.scss
+++ b/styles/articlesPage.scss
@@ -4,6 +4,18 @@
         max-width: 1500px;
         width: 100%;
         margin: 0 auto;
+    //     .mostViewsArticles {
+    //         animation: fadeOpacityToBottom .4s;
+    //     }
+    //     .bestAuthors {
+    //         animation: fadeOpacityToBottom .4s;
+    //     }
+    //     .suggestedArticles {
+    //         animation: fadeOpacityToBottom .4s;
+    //     }
     }
+    // footer {
+    //     animation: fadeOpacityToTop .4s;
+    // }
 }
 
