--- a/styles/globalColors.scss
+++ b/styles/globalColors.scss
@@ -23,6 +23,14 @@
   background-color: #3F3351 !important;
 }
 
+.black {
+  color: #2c3e50;
+}
+
+.blue {
+  color: #3498db;
+}
+
 .redPeach {
   color: #FF8B8B;
 }
