end articlePage UI coding

--- a/styles/articlesPage.scss
+++ b/styles/articlesPage.scss
@@ -46,3 +46,11 @@
     }
 }
 
+.subscribe {
+    .nextui-input-main-container {
+        width: 30%;
+    }
+    label {
+        direction: ltr;
+    }
+}
