--- a/styles/globalColors.scss
+++ b/styles/globalColors.scss
@@ -23,6 +23,10 @@
   background-color: #3F3351 !important;
 }
 
+.backGray {
+  background-color: #2c3e50;
+}
+
 .gray {
   color: #7f8c8d !important;
 }
