--- a/styles/asideFiltering.scss
+++ b/styles/asideFiltering.scss
@@ -21,6 +21,7 @@
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(3px);
     -webkit-backdrop-filter: blur(3px);
+    z-index: 9999;
     .asideFilteringMain {
         .elphebetFiltering {
             main {
