--- a/styles/globalCardClasses.scss
+++ b/styles/globalCardClasses.scss
@@ -1,4 +1,5 @@
 .myCard {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -6,9 +7,9 @@
     margin: 1rem;
     max-width: 400px;
     width: 100%;
-    border: 1px solid black;
+    box-shadow: 0 0 10px rgba(73, 92, 131, 0.275);
+    border-radius: 5px;
     .cardHeader {
-        border-bottom: 1px solid black;
         padding: .7rem;
         width: 100%;
         font-size: 1.1rem;
@@ -18,19 +19,66 @@
             width: 20%;
             border-radius: 50%;
         }
-        .headerText {
-            
-        }
+    }
+    .cardLabel {
+        position: absolute;
+        top: 0.8rem;
+        left: 0.8rem;
+        width: 60px;
+        height: 60px;
+        padding: .2rem;
+        font-size: .8rem;
+        line-height: 1.5rem;
+        text-align: center;
+        background-color: #395B64;
+        color: white;
+        transition: all .4s;
+        transform: rotate(-36deg);
+        border-radius: 50%;
+    }
+    .cardLabel:hover {
+        transform: scale(1.3);
     }
     .cardBody {
-        border-bottom: 1px solid black;
         width: 100%;
         text-align: center;
     }
     .cardOptions {
-        border-bottom: 1px solid black;
-        width: 100%;
+        position: absolute;
+        top: 0.3rem;
+        left: -3.3rem;
+        display: flex;
+        flex-direction: column;
+        padding: .7rem;
         text-align: center;
+        background-color: #395B64;
+        color: white;
+        box-shadow: 0 0 6px rgba(73, 92, 131, 0.275);
+        border-radius: 5px 0 0 5px;
+        transform: translateX(16px);
+        opacity: 0;
+        transition: all .4s;
+        // z-index: -1;
+        .seen {
+            svg {
+                color: #ABC9FF;
+            }
+        }
+        .like {
+            svg {
+                color: #FF0063;
+            }
+        }
+        .comment {
+            svg {
+                color: #EDDFB3;
+            }
+        }
+        .star {
+            svg {
+                color: #FFF80A;
+            }
+        }
     }
     .cardFooter {
         display: flex;
@@ -51,4 +99,11 @@
             background-color: blue;
         }
     }    
+}
+
+.myCard:hover {
+    .cardOptions {
+        transform: translateX(0);
+        opacity: 1;
+    }
 }
