--- a/styles/singleArticle.scss
+++ b/styles/singleArticle.scss
@@ -1,18 +1,51 @@
 .singleArticle {
     .singleArticleMain {
-        width: 93%;
+        width: 95%;
+        .singleArticleMainAside {
+            justify-content: space-around;
+            padding: 1rem 0.2rem;
+            width: 30%;
+            border-left: .5px solid rgba(115, 119, 123, 0.2);
+            .singleArticleSearchBox {
+                width: 95%;
+                svg {
+                    margin-left: 1rem;
+                    color: #73777B;
+                }
+                svg:hover {
+                    cursor: pointer;
+                }
+                input {
+                    padding: .7rem 0;
+                }
+                input::placeholder {
+                    padding: .7rem 0;
+                    font-size: .8rem;
+                }
+            }
+        }
+        singleArticleMainArticle {
+            width: 70%;
+        }
     }
     .singleArticleNavbar {
+        position: -webkit-sticky;
+        position: sticky;
+        top: 0;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         padding: 0 .5rem 0 .7rem;
         border-right: .5px solid rgba(115, 119, 123, 0.2);
-        width: 7%;
+        width: 5%;
+        height: 100vh;
         .topNav {
             img {
                 filter: grayscale(100%);
                 width: 5rem;
+            }
+            img:hover {
+                filter: grayscale(50%);
             }
         }
         .middleNav {
